# ubiquitous-eureka

./: .gitignore  .ruff.toml  pyproject.toml
docs/data/: zarr_layout
src/ubiquitous_eureka/: common.py
src/ubiquitous_eureka/data/: __init__.py  density.py  pair.py  prep_utils.py  structure.py
src/ubiquitous_eureka/model/: atom_net.py
src/ubiquitous_eureka/model/components/: constraints.py  layers.py  losses.py
src/ubiquitous_eureka/util/: constants.py  dataset.py  hdf5_layout  ndimage.py
